@@ -1,3 +1,4 @@
+- wait for p only in pause to allow switching away from window (2019/03/05 MS)
 - properly mute sound on startup if disabled (2019/02/05 MS)
 
 1.0.3:
